[package]
name = "bitcoin_bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
nostr-bot = { git = "https://github.com/slaninas/nostr-bot", rev = "6f1419e82ce580ffc0f84b180eb1326381dfef7b" }
num-format = "0.4.0"
reqwest = "0.11.11"
serde_json = "1.0.83"
