[package]
name = "bitcoin_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
compound_duration = "1.2.0"
nostr-bot = "0.2"
num-format = "0.4.0"
reqwest = "0.11.11"
serde_json = "1.0.83"
